fix z-index toast and option-list

--- a/src/public/css/chat-new.css
+++ b/src/public/css/chat-new.css
@@ -86,6 +86,7 @@ body {
     width: 350px;
     background-color: #fff;
     box-shadow: 0px 2px 3px 0px rgb(165, 165, 165);
+    z-index: 5;
 }
 
 .conversation-option:hover .list-option {
