--- a/src/public/css/toast.css
+++ b/src/public/css/toast.css
@@ -2,7 +2,7 @@
     position: fixed;
     right: 12px;
     top: 12px;
-    z-index: 1;
+    z-index: 9999;
 }
 
 .notification-success,
